--- a/style/less/main.less
+++ b/style/less/main.less
@@ -285,7 +285,6 @@ body {
       }
       .menu-dropdown {
         left: 0;
-        margin-top: .067em;
         z-index: 1;
         display: none;
       }
